# chemopy

./: .flake8  .gitignore  MANIFEST.in  MOPAC.cfg  README.md  README.rst  external.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  test.yml
docs/source/: chemopy.rst  conf.py  index.rst  modules.rst  pychem.rst
src/chemopy/: AtomProperty.py  AtomTypes.py  GeoOpt.py  __init__.py  asa.py  atom_property.py  atom_types.py  basak.py  bcut.py  charge.py  chemopy.py  connectivity.py  constitution.py  cpsa.py  descs.json  estate.py  external.py  external_parser.py  externals.py  fingerprint.py  fingerprint3d.py  geary.py  geo_opt.py  geometric.py  getmol.py  kappa.py  moe.py  molproperty.py  moran.py  moreaubroto.py  morse.py  pychem.py  quanchem.py  radius.py  rdf.py  topology.py  utils.py  vector3d.py  whim.py
tests/: __init__.py  constants.py  pytest.py  test_atom_types.py  test_descs_fps.py  test_details.py  test_fetchmols.py  test_geo_opt.py  test_individual_descriptor_methods.py  test_parallel_core_usage.py  test_pychem2d.py  test_pychem3d.py  test_radius.py  test_utils.py  test_vector3d.py
tests/samples/: drugbank.txt  ebi.txt
