[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chemopy2"
dynamic = ["version"]
description = "A Python library calculating molecular descriptors."
readme = "README.md"
license = { text = "GNU General Public License v3" }
authors = [
    { name = "Dongsheng Cao" },
    { name = "Yizeng Liang" },
]
maintainers = [
    { name = "Olivier J. M. Béquignon", email = "olivier.bequignon.maintainer@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = [
    "chemopy",
    "cheminformatics",
    "molecular descriptors",
    "molecular fingerprints",
    "QSAR",
]
dependencies = [
    "more-itertools",
    "natsort",
    "numpy>=2.0.0",
    "rdkit>=2023.3.1",
    "mhfp",
    "map4-ojmb==1.0",
    "e3fp",
    "numba",
]

[project.urls]
Homepage = "https://github.com/OlivierBeq/chemopy"
"Bug Tracker" = "https://github.com/OlivierBeq/chemopy/issues"
"Source Code" = "https://github.com/OlivierBeq/chemopy"
Download = "https://github.com/OlivierBeq/chemopy/releases"

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "coverage"]
docs = ["sphinx<7", "sphinx-rtd-theme", "sphinx-autodoc-typehints", "sphinx_automodapi"]

[tool.setuptools]
package-dir = { "" = "src" }
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "chemopy.__version__" }

[tool.setuptools.package-data]
"*" = ["*"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["docs/source/conf.py"]

[tool.ruff.lint]
ignore = [
    "S301", # pickle
    "S403", # pickle
    "S404", # subprocess import
    "S603", # subprocess call
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F403", "F405"] # tests rely on `from tests.constants import *`

[tool.pytest.ini_options]
addopts = "--cov=chemopy --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["src/chemopy"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
    "def __str__",
    "def __repr__",
]
