[metadata]
name = chemopy
version = 1.0.0
description = "A package to calculate molecular descriptors."
long_description = file: README.rst

url = ""

author = "Dongsheng Cao, Yizeng Liang"
author_email = "oriental-cds@163.com"
maintainer = "Olivier J. M. Béquignon"
maintainer_email = "olivier.bequignon.maintainer@gmail.com"

license = GNU General Public License v3
license_file = LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6

keywords =
    cheminformatics
    molecular descriptors
    QSAR

[options]
include_package_data = True
packages = find:
package_dir = 
    = src
install_requires =
    numpy
    scipy
    defusedxml
    mhfp
    map4 @ http://github.com/OlivierBeq/map4/tarball/master
    mordred @ http://github.com/OlivierBeq/mordred/tarball/develop
    descriptastorus @ http://github.com/OlivierBeq/descriptastorus/tarball/master

[options.packages.find]
where = src

[options.package_data]
chemopy = 
    MOPAC/*
    MOPAC.cfg

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints

testing =
    pytest